implementing postgre elements and stages