@@ -1,108 +1,37 @@
 package org.nmcpye.datarun.acl;
 
-import org.nmcpye.datarun.common.AuditableObject;
+import org.springframework.security.acls.domain.CumulativePermission;
 import org.springframework.security.acls.domain.ObjectIdentityImpl;
-import org.springframework.security.acls.domain.PrincipalSid;
 import org.springframework.security.acls.model.*;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.HashSet;
+import java.io.Serializable;
+import java.lang.reflect.Method;
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
- * <pre>
- *     {@code
- *  // in the service:
- * public DocumentDto fetchDocument(Long id) {
- *     Document doc = documentRepo.findById(id).orElseThrow(...);
- *     ObjectIdentity oid = new ObjectIdentityImpl(Document.class, id);
- *     Set<Permission> perms = getEffectiveDataPermissions(oid);
- *     return new DocumentDto(id, doc.getTitle(), perms);
- * }
- * }
- * </pre>
- *
  * @author Hamza Assada, <7amza.it@gmail.com> <16-05-2025>
  */
 @Service
 public class DefaultAclService implements AclService {
     private final MutableAclService aclService;
+    private final MutableAclService lookupService;    // for reading ACLs
+    private final SidRetrievalStrategy sidRetrieval;
 
-    public DefaultAclService(MutableAclService aclService) {
-        this.aclService = aclService;
+    public DefaultAclService(MutableAclService mutableAclService,
+                             MutableAclService lookupService,
+                             SidRetrievalStrategy sidRetrieval) {
+        this.aclService = mutableAclService;
+        this.lookupService = lookupService;
+        this.sidRetrieval = sidRetrieval;
     }
 
-    /**
-     * Example:
-     *
-     * <pre>
-     * {@code
-     *  assignPermissions(
-     *     activity,
-     *     new PrincipalSid("alice"),
-     *     MetaDataPermission.META_READ,
-     *     MetaDataPermission.META_READ,
-     * );
-     *
-     * // for a team or a rule
-     * assignPermissions(
-     *     formTemplate,
-     *     // TeamSid, etc.
-     *     new GrantedAuthoritySid("ROLE_EDITOR"),
-     *     DataPermission.DATA_WRITE,
-     *     DataPermission.DATA_UPDATE,
-     *     true
-     * );
-     * }
-     * </pre>
-     * <p>
-     * Checking Combined Permissions:
-     * <pre>
-     *     {@code
-     *      // “Does the user have BOTH META_READ and META_WRITE?”
-     *      Permission required = new CumulativePermission()
-     *           .set(MetaDataPermission.META_READ)
-     *           .set(MetaDataPermission.META_WRITE);
-     *
-     *      boolean ok = acl.isGranted(
-     *          Collections.singletonList(required),
-     *          Collections.singletonList(new PrincipalSid(auth)),
-     *          false
-     *      );
-     *     }
-     * </pre>
-     * <p>
-     * Or check just data-level:
-     * <pre>
-     *     {@code
-     *        acl.isGranted(
-     *        Collections.singletonList(DataPermission.DATA_ADMIN),
-     *        Collections.singletonList(userSid),
-     *        false
-     *      );
-     *      // for user detail properties
-     *      Acl acl = aclService.readAclById(oid);
-     *      Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-     *      List<Sid> sids = SidRetrievalStrategy.buildSids(auth);
-     *      boolean granted = acl.isGranted(
-     *     Arrays.asList(DataPermission.DATA_READ),
-     *     sids,
-     *     false
-     * );
-     *   }
-     * </pre>
-     *
-     * @param domainObject AuditableObject system entity
-     * @param sid          who identity
-     * @param permissions  the permissions to grant
-     */
     @Override
     public void assignPermissions(Object domainObject, Sid sid, Permission... permissions) {
-        ObjectIdentity oid = new ObjectIdentityImpl(domainObject.getClass(),
-            ((AuditableObject<?>) domainObject).getUid());
+        ObjectIdentity oid = new ObjectIdentityImpl(domainObject.getClass(), getId(domainObject));
         MutableAcl acl;
         try {
             acl = (MutableAcl) aclService.readAclById(oid);
@@ -110,42 +39,56 @@ public class DefaultAclService implements AclService {
             acl = aclService.createAcl(oid);
         }
 
-        for (Permission permission : permissions) {
-            acl.insertAce(acl.getEntries().size(), permission, sid, true);
+        // clear existing ACEs for this Sid?
+        // acl.getEntries().removeIf(entry -> entry.getSid().equals(sid));
+        CumulativePermission cumulative = new CumulativePermission();
+        for (Permission p : permissions) {
+            cumulative.set(p);
         }
-
+        acl.insertAce(acl.getEntries().size(), cumulative, sid, true);
         aclService.updateAcl(acl);
     }
 
     @Override
     public void createChildAcl(ObjectIdentity childOid, ObjectIdentity parentOid,
                                Sid sid, Permission perm) {
-        // read or create parent ACL
-        MutableAcl parentAcl = (MutableAcl) aclService.readAclById(parentOid);
-        // create child ACL
-        MutableAcl childAcl = aclService.createAcl(childOid);
-        // link and turn on inheritance
-        childAcl.setParent(parentAcl);
-        childAcl.setEntriesInheriting(true);
-        // grant, e.g., READ to a user
-        childAcl.insertAce(childAcl.getEntries().size(), perm, sid, true);
-        aclService.updateAcl(childAcl);
+        MutableAcl parent = (MutableAcl) aclService.readAclById(parentOid);
+        MutableAcl child;
+        try {
+            child = (MutableAcl) aclService.readAclById(childOid);
+        } catch (NotFoundException nfe) {
+            child = aclService.createAcl(childOid);
+        }
+        child.setParent(parent);
+        child.setEntriesInheriting(true);
+        child.insertAce(child.getEntries().size(), perm, sid, true);
+        aclService.updateAcl(child);
     }
 
     @Override
     public Set<Permission> getEffectiveDataPermissions(ObjectIdentity oid) {
-        // readAclById will traverse parent links if entriesInheriting==true
-        Acl acl = aclService.readAclById(oid);
-        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        Sid userSid = new PrincipalSid(auth);
-        // check each known permission
-        Set<Permission> granted = new HashSet<>();
-        for (Permission p : DataPermission.PERMISSIONS) {
-            if (acl.isGranted(Collections.singletonList(p),
-                Collections.singletonList(userSid), false)) {
-                granted.add(p);
-            }
+        // readAclById will resolve inherited entries
+        Acl acl = lookupService.readAclById(oid);
+        List<Sid> sids = sidRetrieval.getSids(
+            SecurityContextHolder.getContext().getAuthentication());
+        return DataPermission.PERMISSIONS.stream()
+            .filter(p -> {
+                try {
+                    return acl.isGranted(List.of(p), sids, false);
+                } catch (NotFoundException | UnloadedSidException e) {
+                    return false;
+                }
+            })
+            .collect(Collectors.toSet());
+    }
+
+    private Serializable getId(Object domainObject) {
+        // assume all your entities have getId()
+        try {
+            Method m = domainObject.getClass().getMethod("getUid");
+            return (Serializable) m.invoke(domainObject);
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Cannot extract id", e);
         }
-        return granted;
     }
 }
